# gitlab-knowledege

./: README.md  pyproject.toml
src/project_knowledge_mcp/: __init__.py  config.py  conflict_detector.py  diagram_renderer.py  errors.py  gitlab_connector.py  ingestion_coordinator.py  knowledge_store.py  main.py  mcp_server.py  models.py  project_catalog.py  scheduler.py  visualization_server.py
tests/: conftest.py
tests/integration/: _mcp_stdio_runner.py  _shutdown_e2e_runner.py  test_go_analyzer_golden.py  test_mcp_stdio_handshake.py  test_scheduler_virtual_clock.py  test_shutdown_e2e.py  test_single_process.py  test_visualization_server_loopback_bind.py  test_visualization_server_response_latency.py
tests/property/: test_config_validation_property.py  test_property_01_vendor_exclusion.py  test_property_02_analyzer_determinism.py  test_property_02_enumeration_completeness.py  test_property_03_enumeration_metadata.py  test_property_03_no_go_regression.py  test_property_04_go_purpose_priority.py  test_property_04_purpose_summary_length.py  test_property_05_content_free_unknown.py  test_property_05_go_http_detection.py  test_property_06_go_scheduler_detection.py  test_property_06_project_profile_shape.py  test_property_07_external_service_dedup.py  test_property_07_go_activemq_detection.py  test_property_08_db_tables_mixed_mode.py  test_property_08_go_file_io.py  test_property_08_go_file_io_classification.py  test_property_09_go_cli_detection.py  test_property_09_go_cli_entry_points.py  test_property_09_write_roundtrip.py  test_property_10_go_external_service_detection.py  test_property_10_persistence_across_restart.py  test_property_11_go_db_tables_extraction.py  test_property_11_snapshot_isolation.py  test_property_12_fx_viper_neutrality.py  test_property_12_single_flight.py  test_property_13_classify_pair_shape.py  test_property_13_skip_files.py  test_property_14_find_all_conflicts_closure.py  test_property_15_allowed_basis.py  test_property_16_unknown_forces_indeterminate.py  test_property_17_out_of_scope_rejection.py  test_property_18_tools_list_solicited_complete.py  test_property_19_tools_call_dispatch.py  test_property_20_loopback_only_binding.py  test_property_21_index_response_shape.py  test_property_22_per_project_response_shape.py  test_property_23_dependencies_response_shape.py  test_property_25_diagram_routes_content_type.py  test_property_26_unknown_path_404.py  (+4 more)
tests/unit/: test_aggregator_skip_surfacing.py  test_close_mcp_stdio.py  test_config_happy_paths.py  test_db_tables_detector.py  test_dependency_graph_renderer.py  test_errors.py  test_gitlab_auth_error_handling.py  test_gitlab_connector_enumerate.py  test_gitlab_group_not_found.py  test_go_analyzer_no_toolchain.py  test_go_db_tables_detector.py  test_go_external_services.py  test_go_filter.py  test_go_io_composer.py  test_go_parser.py  test_go_tokenizer.py  test_graph_data_encoding.py  test_ingestion_coordinator_state_machine.py  test_initial_refresh.py  test_io_extractor.py  test_is_analyzable_path.py  (+18 more)
(+35 files in other folders)
