[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "project-knowledge-mcp"
version = "0.0.0"
description = "MCP server that builds and serves structured knowledge about projects in a GitLab group."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Project Knowledge MCP" }]

dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
project-knowledge-mcp = "project_knowledge_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_knowledge_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, isolated unit tests",
    "property: Hypothesis-driven property-based tests",
    "integration: integration tests that exercise multiple components together",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "PLR0913", # too many arguments (design has wide signatures)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",     # tests don't require full annotations
    "PLR2004", # magic values are fine in tests
    "ARG",     # fixture args may go unused
    "S101",    # asserts are expected in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
check_untyped_defs = true
extra_checks = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "unused-awaitable",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true
